# itmo-fp-lab-2

./: .ocamlformat  dune-project  lab2.opam  readme.md
lib/: dune  oabag.ml  oabag.mli
test/: dune  maptest.ml  prop.ml  runner.ml  stringtest.ml  tests.ml  unit.ml
